--- a/api_yamdb/requirements.txt
+++ b/api_yamdb/requirements.txt
@@ -48,3 +48,26 @@ typed-ast==1.5.4
 typing_extensions==4.2.0
 urllib3==1.26.10
 zipp==3.8.0
+python-dotenv==0.21.0
+asgiref==3.2.10
+Django==2.2.16
+django-filter==2.4.0
+djangorestframework==3.12.4
+djangorestframework-simplejwt==4.8.0
+python-dotenv==0.21.0
+gunicorn==20.0.4
+psycopg2-binary==2.8.6
+PyJWT==2.1.0
+sqlparse==0.3.1 
+drf_yasg
+pytest-django
+asgiref==3.2.10
+Django==2.2.16
+django-filter==2.4.0
+djangorestframework==3.12.4
+djangorestframework-simplejwt==4.8.0
+gunicorn==20.0.4
+psycopg2-binary==2.8.6
+PyJWT==2.1.0
+pytz==2020.1
+sqlparse==0.3.1
